ajout d'exercice et finitions
ajout d'exercice et finitions

--- a/Python_LI248.ipynb
+++ b/Python_LI248.ipynb
@@ -1944,6 +1944,43 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Les avantages de la programmation objet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la voiture avance\n",
+      "la voiture avance\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb_de_roues = 4\n",
+    "def avancer():\n",
+    "    print(\"la voiture avance\")\n",
+    "    \n",
+    "avancer()\n",
+    "    \n",
+    "class Voiture:\n",
+    "    nb_de_roues = 4\n",
+    "    def avancer(self):\n",
+    "        print(\"la voiture avance\")\n",
+    "\n",
+    "ma_fiat = Voiture()\n",
+    "ma_fiat.avancer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "LY1ot8nysQKB"
    },
@@ -2041,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "Zxh2gD8H0b71"
    },
@@ -2069,8 +2106,12 @@
     "  def arreter(self):\n",
     "    print(\"Moteur arreté\")\n",
     "\n",
-    "\n",
-    "class Voiture:\n",
+    "class Véhicule:\n",
+    "  def demarrer(self):\n",
+    "    print(\"Demarrage de la voiture\")\n",
+    "    self.moteur.demarrer()\n",
+    "    \n",
+    "class Voiture(Véhicule):\n",
     "  roues = [Roue(), Roue(), Roue(), Roue()]\n",
     "  moteur = Moteur(\"16CV\")\n",
     "\n",
@@ -2084,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
